# crontab-ui

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  permissions.rs  python.rs
src/components/: CommandOutput.tsx  CronDescription.tsx  CronInput.tsx  JobHistory.tsx  LogDialog.tsx  PermissionDialog.tsx  ScheduleDialog.tsx
src/components/neumorphic/: Dialog.tsx  ErrorMessage.tsx  styles.ts
src/utils/: validation.ts
