[package]
name = "crontab-ui"
version = "0.1.0"
description = "A desktop management tool for crontab"
authors = ["genkin-he"]
license = "MIT"
repository = "https://github.com/genkin-he/crontab-ui"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
cron = "0.12"

[features]
custom-protocol = ["tauri/custom-protocol"] 
